# yandex-music-likes-to-evernote

./: .env.example  .gitignore  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: build.yml  release.yml  sync.yml
src/: audio.rs  config.rs  enrichment.rs  evernote_client.rs  main.rs  note.rs  state.rs  sync.rs  yandex.rs
