[package]
name = "yandex-music-likes-to-evernote"
version = "1.3.3"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
evernote = "0.1.2"
html-escape = "0.2"
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
thrift = "0.17"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
yandex-music = "0.6"

[dev-dependencies]
pretty_assertions = "1.4"
